@@ -18,12 +18,10 @@
     </parent>
 
     <properties>
-        <java.version>23</java.version>
-        <maven.compiler.source>23</maven.compiler.source>
-        <maven.compiler.target>23</maven.compiler.target>
+        <java.version>21</java.version>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <!-- Add this to enable experimental Java 23 support -->
-        <argLine>-Dnet.bytebuddy.experimental=true</argLine>
     </properties>
 
     <modules>
